src/test/deca/context/invalid/sansobjet/assign_incompatible.deca
// The type of the variable and its assignation are not compatible
// Description : Assignation incompatible.
// Resultat : Echech en ligne 7 : un string ne peut pas être initialisé ni mis en tant que variable

{
    int x = 4;
    x = true;
}